GNOME Bugzilla – Bug 635455
primary display setting lost when adding/removing displays
Last modified: 2010-11-23 02:51:38 UTC
It seems that the primary display setting is lost when adding/removing displays. We should probably try to keep it on the monitor it was on last if it still exists and is turned on. And if that monitor is turned off or disconnected it might make sense to prefer the either the top-left most display or the internal display.
Until something better comes along: commit 89c21494aec0a2feda705d4e4cca36ab4ebff9f8