rr: add api for ensuring a primary display is set in config

https://bugzilla.gnome.org/show_bug.cgi?id=635455